--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<td>Scheduled Learning Activities:</td>
 		<td>1 x 3 hour active class per week, weekly drop in support.</td>
 	</tr>
-</table>"
+</table>
 <h3> Content</h3> 
 <p> 
 	To be successful IT graduates need to understand the use of industry tools and practices,  
